--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,18 @@
 /* You can add global styles to this file, and also import other style files */
+.title {
+  text-align: center;
+  margin-top: 2%;
+  margin-bottom: 2%;
+}
+
+.profileButton {
+  text-align: center;
+  margin-top: 1%;
+  margin-bottom: 1%;
+}
+
+footer {
+  text-align: center;
+  margin-top: 2%;
+  margin-bottom: 2%;
+}
