--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,6 +1,6 @@
 <div class="title">
   <h5>
-    Welcome to the Microsoft Authentication Library For JavaScript - Angular SPA
+    Welcome!
   </h5>
-  <p>View your data from Microsoft Graph by clicking the "View Profile" link above.</p>
+  <p>You have successfully signed in. This app does not request any additional permissions.</p>
 </div>
