--- a/src/app/profile/profile.component.html
+++ b/src/app/profile/profile.component.html
@@ -1,5 +1,5 @@
 <div class="profile">
-  <h3>🎉 Welcome</h3>
+  <h3>🎉 You are signed in</h3>
   <p>{{ welcomeMessage }}</p>
-  <p>No data is fetched from any API on this page.</p>
+  <p>This is your profile page. No API calls are made.</p>
 </div>
